--- a/assets/css/main 2.css
+++ b/assets/css/main 2.css
@@ -77,7 +77,7 @@ video {
 }
 
 h1,
-h2, 
+h2,
 h3,
 h4,
 h5,
@@ -1424,8 +1424,7 @@ ol {
 /* Topbar */
 .header .toolbar-area {
   padding: 12px 0;
-  background: #a11717;
-  height: 55px;
+  background: #ce1515;
 }
 
 .header .toolbar-area .toolbar-social {
@@ -1476,19 +1475,58 @@ ol {
 .header .toolbar-login a:hover {
   opacity: 0.7;
 }
-
 .header .toolbar-login a:last-child {
   margin: 0;
 }
-
-.header .toolbar-login .btn {
+.header .toolbar-social .btn {
   color: #a11717;
+  border-radius: 18px;
+  background-color:#1c7bf7;
+  font-size: 9px;
+  padding-top: 14px;
+  padding-bottom: 19px;
+  padding: 7px;
+  border-color:red;
+  border-style: double;
+  position: relative;
+  top: -3px;
+
+}
+.header .toolbar-social a:hover {
+  opacity: 0.7;
+}
+.header .toolbar-social .btn:hover {
+  color: #fff;
+  opacity: 1;
+  background-color: transparent;
+  border-color: #fff;
+}
+.atf-top-header-list li{
+  margin-right: 30px;
+	color:white;
+	font-size: 15px;
+}
+.header .toolbar-login .btn {
+  color: #fff;
   padding: 6px 20px;
-  font-size: 13px;
-  background-color: #fff;
-  border-radius: 4px;
+  font-size: 14px;
+  background-color:#1c7bf7;
+  border-radius: 16px;
   border: 1px solid transparent;
   font-weight: 600;
+  padding-bottom: 9px;
+  padding: 8px;
+  position: relative;
+  top:50%;
+  border-color:red;
+  border-style: double;
+  width:140px;
+  height:37px;
+  border-color:red;
+  border-style: double;
+  position: relative;
+  top: 2.8px;
+
 }
 
 .header .toolbar-login .btn:before {
@@ -1543,6 +1581,8 @@ ol {
   position: relative;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
+  padding-bottom:29 px;
+  height:180px;
 }
 
 .navbar-brand {
@@ -1550,7 +1590,10 @@ ol {
 }
 
 .navbar-brand img {
-  width: 170px;
+  width: 150px;
+  height: 170px;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
 
 .mobile-menu-btn {
@@ -2005,7 +2048,7 @@ ol {
 ========================================*/
 .hero-area {
   position: relative;
-  background-color: #F4F7FA;
+  background-color:#081828;
   overflow: hidden;
 }
 
@@ -2029,7 +2072,7 @@ ol {
 .hero-area.style2 .hero-text h1 {
   font-size: 40px;
   line-height: 55px;
-  color: #081828;
+  color: red;
 }
 
 .hero-area.style2 .hero-text h1 span {
@@ -2047,7 +2090,7 @@ ol {
 }
 
 .hero-area.style2 .hero-text .button .btn::before {
-  background: #081828;
+  background: red;
 }
 
 .hero-area.style2 .hero-text .button .btn i {
@@ -2125,7 +2168,7 @@ ol {
 .hero-area .tns-nav button {
   height: 10px;
   width: 10px;
-  background-color: red;
+  background-color: #fff;
   border-radius: 30px;
   display: inline-block;
   border: none;
@@ -2149,7 +2192,7 @@ ol {
 
 .hero-area .hero-inner.overlay::before {
   opacity: 0.9;
-  background: #081828;
+  background:#080813;
 }
 
 .hero-area .hero-image {
@@ -2174,7 +2217,7 @@ ol {
   margin-bottom: 15px;
   display: inline-block;
   padding: 12px 22px;
-  background: #a11717 !important;
+  background:#1c7bf7 !important;
   text-transform: none;
   border-radius: 30px;
 }
@@ -2373,6 +2416,11 @@ ol {
   background-color: #00a6511c;
   border-radius: 50%;
 }
+.second-mission-vision-container p{
+  font-size: 19px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
  
 .line-space {
   line-height: 1.7;
@@ -2453,10 +2501,11 @@ ol {
 }
 
 .courses .single-course .course-image img {
-  width: 450px;
-  height:430px;
+  width: 100%;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
+  height: 600px;
+  width:500px;
 }
 
 .courses .single-course .course-image .price {
@@ -2604,7 +2653,7 @@ ol {
   border-radius: 30px 30px 30px 0;
   font-weight: 600;
   color: #fff;
-  background-color: #081828;
+  background-color: #1c7bf7;
   font-size: 13px;
   margin-bottom: 8px;
 }
@@ -2617,6 +2666,10 @@ ol {
   text-transform: capitalize;
   position: relative;
   font-weight: 700;
+}
+.about-us .about-left .about-title p{
+  font-size: 19px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .about-us .about-left .button {
@@ -2642,10 +2695,10 @@ ol {
 }
 
 .about-us .about-right img {
-  width: 310px;
-  height:310px;
+  width: 100%;
   border-radius: 0;
   overflow: hidden;
+  height: 800px;
 }
 
 .our-achievement {
