--- a/assets/css/main 2.css
+++ b/assets/css/main 2.css
@@ -1479,7 +1479,7 @@ ol {
   margin: 0;
 }
 .header .toolbar-social .btn {
-  color: #a11717;
+  color: rgb(211, 211, 19);
   border-radius: 18px;
   background-color:#1c7bf7;
   font-size: 9px;
